Fix sonar cube warnings